fix: align the info block

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -8,14 +8,15 @@
 
 @media screen and (max-width: 523px) {
   .profile__info {
-    margin-top: 26px;
+    margin: 26px auto 0 auto;
   }
 }
 
 @media screen and (max-width: 425px) {
   .profile__info {
-    grid-template-columns: 181fr 18px;
-    margin-left: 17px;
+    width: 100%;
+    grid-template-columns: 213px 18px;
     gap: 8px 10px;
+    justify-content: center;
   }  
 }
